--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rssn"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["The rssn developers"]
 description = "A comprehensive scientific computing library for Rust, aiming for feature parity with NumPy, SciPy, and SymPy."
@@ -71,3 +71,6 @@ proptest = "1.2"
 [[bench]]
 name = "rssn_benches"
 harness = false
+
+[package.metadata.docs.rs]
+all-features = true
