--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ full = ["plotters"]
 [dev-dependencies]
 criterion = { version = "0.7", features = ["html_reports"] }
 proptest = "1.2"
+assert_approx_eq = "1.1.0"
 
 [[bench]]
 name = "rssn_benches"
