--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rssn"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 authors = ["The rssn developers"]
 description = "A comprehensive scientific computing library for Rust, aiming for feature parity with NumPy, SciPy, and SymPy."
@@ -50,6 +50,8 @@ interp = "2.1.1"
 itertools = "0.14"
 rustfft = "6.1.0"
 sprs = "0.11.0"
+uom = { version = "0.37.0", features = ["use_serde", "num-bigint", "std", "usize", "si"] }
+bigdecimal = { version = "0.4", features = ["serde"] }
 special = "0.11.4"
 errorfunctions = "0.2"
 ndarray-npy = "0.9"
