--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rssn"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 authors = ["The rssn developers"]
 description = "A comprehensive scientific computing library for Rust, aiming for feature parity with NumPy, SciPy, and SymPy."
@@ -22,6 +22,9 @@ categories = [
     "simulation",
     "algorithms",
 ]
+
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 [profile.dev]
 lto = false
@@ -50,7 +53,13 @@ interp = "2.1.1"
 itertools = "0.14"
 rustfft = "6.1.0"
 sprs = "0.11.0"
-uom = { version = "0.37.0", features = ["use_serde", "num-bigint", "std", "usize", "si"] }
+uom = { version = "0.37.0", features = [
+    "use_serde",
+    "num-bigint",
+    "std",
+    "usize",
+    "si",
+] }
 bigdecimal = { version = "0.4", features = ["serde"] }
 special = "0.11.4"
 errorfunctions = "0.2"
@@ -62,6 +71,8 @@ num-complex = "0.4.4"
 num-bigint = { version = "0.4", features = ["serde", "rand"] }
 num-rational = { version = "0.4", features = ["serde"] }
 num-traits = "0.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 plotters = { version = "0.3", features = [
     "image",
