--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rssn"
-version = "0.1.6"
+version = "0.1.7"
 edition = "2021"
 authors = ["The rssn developers"]
 description = "A comprehensive scientific computing library for Rust, aiming for feature parity with NumPy, SciPy, and SymPy."
@@ -74,7 +74,7 @@ num-traits = "0.2"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 libloading = "0.8"
-dashmap = "5.5"
+dashmap = "6.1"
 once_cell = "1.19"
 
 plotters = { version = "0.3", features = [
@@ -84,6 +84,7 @@ plotters = { version = "0.3", features = [
     "font-kit",
     "evcxr",
 ], optional = true }
+ahash = { version = "0.8.12", features = ["serde"] }
 
 [features]
 default = []
