--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,10 @@ argmin-math = { version = "0.5", features = [
     "ndarray_latest-nolinalg",
     "nalgebra_latest",
 ] }
-argmin = { version = "0.11", features = ["serde", "serde1"] }
+argmin = { version = "0.11", features = [
+	"serde", 
+	"serde1"
+] }
 nalgebra = { version = "0.34", features = ["serde-serialize"] }
 quadrature = "0.1.2"
 interp = "2.1.1"
@@ -63,17 +66,20 @@ uom = { version = "0.37.0", features = [
 bigdecimal = { version = "0.4", features = ["serde"] }
 special = "0.11.4"
 errorfunctions = "0.2"
-ndarray-npy = "0.9"
+ndarray-npy = { version = "0.9", optional = true }
 rayon = "1.8.1"
 rand = "0.8"
 ordered-float = "5.0.0"
 num-complex = "0.4.4"
-num-bigint = { version = "0.4", features = ["serde", "rand"] }
+num-bigint = { version = "0.4", features = [
+	"serde", 
+	"rand"
+] }
 num-rational = { version = "0.4", features = ["serde"] }
 num-traits = "0.2"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
-libloading = "0.8"
+libloading = { version = "0.8", optional = true }
 dashmap = "6.1"
 once_cell = "1.19"
 
@@ -88,7 +94,7 @@ ahash = { version = "0.8.12", features = ["serde"] }
 
 [features]
 default = []
-full = ["plotters"]
+full = ["plotters", "libloading", "ndarray-npy"]
 
 [dev-dependencies]
 criterion = { version = "0.7", features = ["html_reports"] }
@@ -101,3 +107,6 @@ harness = false
 
 [package.metadata.docs.rs]
 all-features = true
+
+[lints.clippy]
+empty-line-after-doc-comments = "allow"
