--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,7 @@ serde_json = "1.0"
 libloading = { version = "0.8", optional = true }
 dashmap = "6.1"
 once_cell = "1.19"
+lazy_static = "1.4.0"
 
 plotters = { version = "0.3", features = [
     "image",
