--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,7 +68,8 @@ special = "0.11.4"
 errorfunctions = "0.2"
 ndarray-npy = { version = "0.9", optional = true }
 rayon = "1.8.1"
-rand = "0.8"
+rand_v09 = { package = "rand", version = "0.9.2" } 
+rand = "0.8.5"
 ordered-float = "5.0.0"
 num-complex = "0.4.4"
 num-bigint = { version = "0.4", features = [
