--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rssn"
-version = "0.1.10"
+version = "0.1.11"
 edition = "2021"
 authors = ["The rssn developers"]
 description = "A comprehensive scientific computing library for Rust, aiming for feature parity with NumPy, SciPy, and SymPy."
@@ -39,6 +39,7 @@ opt-level = 3
 strip = "all"
 
 [dependencies]
+uuid = { version = "1.4", features = ["v4"] }
 libc = { version = "0.2", optional = true }
 ndarray = { version = "0.16.1", features = ["serde"] }
 statrs = "0.18.0"
@@ -64,7 +65,8 @@ bigdecimal = { version = "0.4", features = ["serde"] }
 special = "0.11.4"
 errorfunctions = "0.2"
 ndarray-npy = { version = "0.9", optional = true }
-rayon = "1.8.1"
+rayon = "1.8"
+bincode = { version = "2", features = ["serde"] }
 rand_v09 = { package = "rand", version = "0.9.2" }
 rand = "0.8.5"
 ordered-float = "5.0.0"
@@ -78,6 +80,7 @@ libloading = { version = "0.8", optional = true }
 dashmap = "6.1"
 once_cell = "1.19"
 lazy_static = "1.4.0"
+# Not updating nom for compatibility issues.
 nom = { version = "7", optional = true }
 
 plotters = { version = "0.3", features = [
@@ -88,6 +91,7 @@ plotters = { version = "0.3", features = [
     "evcxr",
 ], optional = true }
 ahash = { version = "0.8.12", features = ["serde"] }
+abi_stable = { version = "0.11.3", optional = true }
 
 [build-dependencies]
 vergen = { version = "9.0.6", features = ["build", "cargo", "cargo_metadata", "emit_and_set", "regex", "rustc", "rustc_version", "si", "sysinfo", "time"] }
@@ -97,7 +101,7 @@ vergen-gitcl = { version = "1.0.8", features = ["build", "cargo", "emit_and_set"
 default = []
 output = ["plotters", "ndarray-npy"]
 physics = []
-plugins = ["libloading"]
+plugins = ["libloading", "abi_stable"]
 ffi_api = []
 #Will be avalible at v0.3.0 release.
 ffi_blinding = ["libc"]
