--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,7 +81,7 @@ dashmap = "6.1"
 once_cell = "1.19"
 lazy_static = "1.4.0"
 # Not updating nom for compatibility issues.
-nom = { version = "7", optional = true }
+nom = "7"
 
 plotters = { version = "0.3", features = [
     "image",
@@ -105,8 +105,7 @@ plugins = ["libloading", "abi_stable"]
 ffi_api = []
 #Will be avalible at v0.3.0 release.
 ffi_blinding = ["libc"]
-input = ["nom"]
-full = ["default", "output", "physics", "plugins", "ffi_api", "ffi_blinding", "input"]
+full = ["default", "output", "physics", "plugins", "ffi_api", "ffi_blinding"]
 
 [dev-dependencies]
 criterion = { version = "0.7", features = ["html_reports"] }
