Add GitHub Actions to Dependabot configuration
Add GitHub Actions to Dependabot configuration

Signed-off-by: Xinyu Yang <pana.yang@hotmail.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,3 +5,8 @@ updates:
     dependency-type: "indirect"
     schedule:
       interval: "daily"
+
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"
