Allow indirect dependencies in Dependabot config
Allow indirect dependencies in Dependabot config

Signed-off-by: Xinyu Yang <pana.yang@hotmail.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,9 +2,10 @@ version: 2
 updates:
   - package-ecosystem: "cargo"
     directory: "/"
-    dependency-type: "indirect"
     schedule:
       interval: "daily"
+    allow:
+      - dependency-type: "indirect"
 
   - package-ecosystem: "github-actions"
     directory: "/"
