Enhance CI workflow with push support and AI review
Added support for push events and improved AI review process.

Signed-off-by: Xinyu Yang <pana.yang@hotmail.com>

--- a/.gitea/workflows/ci.yml
+++ b/.gitea/workflows/ci.yml
@@ -3,6 +3,9 @@ name: CI & AI Review
 on:
   pull_request:
     types: [opened, synchronize, reopened]
+  push:
+    branches:
+      - main
 
 jobs:
   build-and-fmt:
@@ -157,4 +160,5 @@ Instruction and Output Format:
             
           else
             submit_comment "$GITEA_TOKEN_COMMENT" "$REVIEW_BODY"
+
           fi
