Refactor CI workflow to include AI review step
Signed-off-by: Xinyu Yang <pana.yang@hotmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
   ai-review:
     needs: build-and-fmt
     runs-on: ubuntu-latest
+    if: ${{ always() }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@5
@@ -155,6 +156,7 @@ Instruction and Output Format:
             gh pr comment "$PR_NUMBER" --body "$REVIEW_BODY" --repo "$REPO" --token "$GH_TOKEN_COMMENT"
 
           fi
+
 
 
 
