--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,7 +77,7 @@ rayon = "1.8"
 bincode = { version = "2", features = ["serde"] }
 # NOTE: Both rand 0.8.5 and 0.9.2 are required.
 # `rand` 0.8.5 is used for compatibility with existing dependencies and safe upgrade path.
-# `rand_v09` (rand 0.9.2) is needed by [INSERT DEPENDENCY OR INTERNAL REASON HERE]. See docs/deps.md for details.
+# `rand_v09` (rand 0.9.2) is needed by INSERT DEPENDENCY.
 rand_v09 = { package = "rand", version = "0.9.2" }
 rand = "0.8.5"
 ordered-float = "5.0.0"
