--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,7 +81,7 @@ bincode = { version = "2", features = ["serde"] }
 rand_v09 = { package = "rand", version = "0.9.2" }
 rand = "0.8.5"
 ordered-float = { version = "5.0.0", features = ["serde"] }
-num-complex = "0.4.4"
+num-complex = "0.4.6"
 num-bigint = { version = "0.4", features = ["serde", "rand"] }
 num-rational = { version = "0.4", features = ["serde"] }
 num-traits = "0.2"
@@ -105,8 +105,25 @@ ahash = { version = "0.8.12", features = ["serde"] }
 abi_stable = { version = "0.11.3", optional = true }
 
 [build-dependencies]
-vergen = { version = "9.0.6", features = ["build", "cargo", "cargo_metadata", "emit_and_set", "regex", "rustc", "rustc_version", "si", "sysinfo", "time"] }
-vergen-gitcl = { version = "1.0.8", features = ["build", "cargo", "emit_and_set", "rustc", "si"] }
+vergen = { version = "9.0.6", features = [
+    "build",
+    "cargo",
+    "cargo_metadata",
+    "emit_and_set",
+    "regex",
+    "rustc",
+    "rustc_version",
+    "si",
+    "sysinfo",
+    "time",
+] }
+vergen-gitcl = { version = "1.0.8", features = [
+    "build",
+    "cargo",
+    "emit_and_set",
+    "rustc",
+    "si",
+] }
 
 [features]
 default = []
