feat: Generate C/C++ FFI headers and exclude specific physics modules from bindings.

--- a/cbindgen.toml
+++ b/cbindgen.toml
@@ -88,7 +88,7 @@ bitflags = true
 [parse]
 parse_deps = false
 include = []
-exclude = []
+exclude = ["physics::physics_mm", "numerical::physics_md"]
 clean = false
 extra_bindings = []
 
