--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,7 +82,7 @@ bincode-next = { version = "2", features = ["serde"] }
 rand_v09 = { package = "rand", version = "0.9.2" }
 rand = "0.8.5"
 ordered-float = { version = "5.0.0", features = ["serde"] }
-num-complex = "0.4.6"
+num-complex = { version = "0.4.6", features = ["serde"] }
 num-bigint = { version = "0.4", features = ["serde", "rand"] }
 num-rational = { version = "0.4", features = ["serde"] }
 num-traits = "0.2"
