--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,7 +106,11 @@ ahash = { version = "0.8.12", features = ["serde"] }
 abi_stable = { version = "0.11.3", optional = true }
 instability = "0.3.10"
 faer = "0.23.2"
-cranelift = { version = "0.127", optional = true, features = ["jit", "module"] }
+cranelift-frontend = { version = "0.127", optional = true }
+cranelift-native = { version = "0.127", optional = true }
+cranelift-codegen = { version = "0.127", optional = true }
+cranelift-module = { version = "0.127", optional = true }
+cranelift-jit = { version = "0.127", optional = true }
 
 [build-dependencies]
 cbindgen = "0.29.2"
@@ -135,7 +139,7 @@ default = []
 output = ["dep:plotters", "dep:ndarray-npy"]
 physics = []
 plugins = ["dep:libloading", "dep:abi_stable"]
-jit = ["dep:cranelift"]
+jit = ["dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-native"]
 ffi_api = []
 # Will be available at v0.3.0 release.
 ffi_blinding = ["dep:libc"]
