--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,18 +106,15 @@ ahash = { version = "0.8.12", features = ["serde"] }
 abi_stable = { version = "0.11.3", optional = true }
 instability = "0.3.10"
 faer = "0.23.2"
-faer_nightly = { package = "faer", version = "0.23.2", features = [
-    "nightly",
-], optional = true }
 cranelift-frontend = { version = "0.127", optional = true }
 cranelift-native = { version = "0.127", optional = true }
 cranelift-codegen = { version = "0.127", optional = true }
 cranelift-module = { version = "0.127", optional = true }
 cranelift-jit = { version = "0.127", optional = true }
-pulp = { version = "0.22.2", features = ["macro", "x86-v4"], optional = true }
-pulp_nightly = { package = "pulp", version = "0.22.2", features = [
+pulp = { version = "0.22.2", features = [
     "macro",
     "x86-v4",
+    "nightly",
 ], optional = true }
 
 [build-dependencies]
@@ -159,7 +156,7 @@ ffi_api = []
 ffi_blinding = ["dep:libc"]
 # Experimental features
 experimental = ["ffi_blinding", "jit", "dep:pulp"]
-nightly = ["dep:pulp_nightly", "dep:faer_nightly"]
+nightly = ["dep:pulp"]
 full = [
     "default",
     "output",
