example: Add examples

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ codegen-units = 1
 panic = "abort"
 opt-level = 3
 strip = true
+debug = true
 
 [dependencies]
 uuid = { version = "1.4", features = ["v4"] }
