--- a/Cargo.toml
+++ b/Cargo.toml
@@ -185,6 +185,7 @@ harness = false
 
 [package.metadata.docs.rs]
 all-features = true
+# rustdoc-args = ["--html-in-header", "doc-header.html"]
 
 [lints.clippy]
 empty-line-after-doc-comments = "allow"
