--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rssn"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2024"
 rust-version = "1.89.0"
 authors = ["The rssn developers"]
@@ -54,24 +54,25 @@ codegen-units = 1
 panic = "abort"
 opt-level = 3
 strip = true
+debug = false
 
 [dependencies]
 uuid = { version = "1.4", features = ["v4"] }
 libc = { version = "0.2", optional = true }
 ndarray = { version = "0.16.1", features = ["serde"] }
-statrs = "0.18.0"
+statrs = "0.18"
 argmin-math = { version = "0.5", features = [
     "ndarray_latest-nolinalg",
     "nalgebra_latest",
 ] }
 argmin = { version = "0.11", features = ["serde", "serde1"] }
 nalgebra = { version = "0.34", features = ["serde-serialize"] }
-quadrature = "0.1.2"
-interp = "2.1.1"
+quadrature = "0.1"
+interp = "2.1"
 itertools = "0.14"
-rustfft = "6.1.0"
-sprs-rssn = "0.11.4"
-uom = { version = "0.37.0", features = [
+rustfft = "6.1"
+sprs-rssn = "0.11"
+uom = { version = "0.37", features = [
     "use_serde",
     "num-bigint",
     "std",
@@ -79,7 +80,7 @@ uom = { version = "0.37.0", features = [
     "si",
 ] }
 bigdecimal = { version = "0.4", features = ["serde"] }
-special = "0.11.4"
+special = "0.11"
 errorfunctions = "0.2"
 ndarray-npy = { version = "0.9", optional = true }
 rayon = "1.8"
@@ -89,17 +90,17 @@ bincode-next = { version = "2", features = ["serde"] }
 # `rand_v09` (rand 0.9.2) is needed by INSERT DEPENDENCY.
 rand_v09 = { package = "rand", version = "0.9.2" }
 rand = "0.8.5"
-ordered-float = { version = "5.0.0", features = ["serde"] }
-num-complex = { version = "0.4.6", features = ["serde"] }
+ordered-float = { version = "5", features = ["serde"] }
+num-complex = { version = "0.4", features = ["serde"] }
 num-bigint = { version = "0.4", features = ["serde", "rand"] }
 num-rational = { version = "0.4", features = ["serde"] }
 num-traits = "0.2"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 libloading = { version = "0.8", optional = true }
-dashmap = "6.1"
+dashmap = "6"
 once_cell = "1.19"
-lazy_static = "1.4.0"
+lazy_static = "1.4"
 # Not updating nom for compatibility issues.
 nom = "7"
 
@@ -110,21 +111,21 @@ plotters = { version = "0.3", features = [
     "font-kit",
     "evcxr",
 ], optional = true }
-ahash = { version = "0.8.12", features = ["serde"] }
-abi_stable = { version = "0.11.3", optional = true }
-instability = "0.3.10"
-faer = "0.23.2"
+ahash = { version = "0.8", features = ["serde"] }
+abi_stable = { version = "0.11", optional = true }
+instability = "0.3"
+faer = "0.23"
 cranelift-frontend = { version = "0.127", optional = true }
 cranelift-native = { version = "0.127", optional = true }
 cranelift-codegen = { version = "0.127", optional = true }
 cranelift-module = { version = "0.127", optional = true }
 cranelift-jit = { version = "0.127", optional = true }
-pulp = { version = "0.22.2", features = [
+pulp = { version = "0.22", features = [
     "macro",
     "x86-v4",
     "nightly",
 ], optional = true }
-simba = { version = "0.9.1", features = [
+simba = { version = "0.9", features = [
     "libm",
     "cordic",
     "decimal",
@@ -132,8 +133,8 @@ simba = { version = "0.9.1", features = [
 ], optional = true }
 
 [build-dependencies]
-cbindgen = "0.29.2"
-vergen = { version = "9.0.6", features = [
+cbindgen = "0.29"
+vergen = { version = "9", features = [
     "build",
     "cargo",
     "cargo_metadata",
@@ -145,7 +146,7 @@ vergen = { version = "9.0.6", features = [
     "sysinfo",
     "time",
 ] }
-vergen-gitcl = { version = "1.0.8", features = [
+vergen-gitcl = { version = "1", features = [
     "build",
     "cargo",
     "emit_and_set",
@@ -186,7 +187,7 @@ full = [
 [dev-dependencies]
 criterion = { version = "0.7", features = ["html_reports"] }
 proptest = "1.2"
-assert_approx_eq = "1.1.0"
+assert_approx_eq = "1.1"
 
 [[bench]]
 name = "rssn_benches"
